--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "@screens/account-settings": "file:./screens/account-settings/",
     "@screens/add-review": "file:./screens/add-review/",
+    "@screens/login": "file:./screens/login/",
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
